--- a/src/components/MatchCard/index.css
+++ b/src/components/MatchCard/index.css
@@ -8,14 +8,27 @@
    display: flex;
    flex-direction: column;
    align-items: center;
+    margin-right: 8px;
+   margin-bottom: 8px;
+   padding: 8px;
+   border-radius: 20px;
+   list-style-type: none;
+   border: none;
+}
+.Logo{
+    height: 120px;
 }
 .competing-team{
     font-size: 20px;
     font-weight: bold;
+    width: 200px;
+    text-align: center;
 }
 .reesult{
     font-size: 16px;
     font-weight: 500;
+    width: 210px;
+    text-align: center;
 }
 .STatus{
     font-size: 18px;
